@@ -1,0 +1,5 @@
+<?php
+
+trigger_error(basename(__FILE__));
+$ex = new Exception();
+echo 'Exception in ', basename($ex->getFile()), ' on line ', $ex->getLine(), "\n";
