@@ -12,5 +12,5 @@ spl_autoload_register(function($class) use ($classlist) {
 var_dump(D::HW);
 ?>
 --EXPECTF--
-Fatal error: Constant expression contains invalid operations in %sgh7771_3.php(7) : eval()'d code(1) : eval()'d code on line 1
+Fatal error: Constant expression contains invalid operations in %sgh7771_3.php(7) : eval()'d code on line 1
 
